--- a/package.json
+++ b/package.json
@@ -81,6 +81,8 @@
   "dependencies": {
     "babel-plugin-transform-object-rest-spread": "^6.20.2",
     "breakpoint-sass": "^2.7.1",
+    "feathers-client": "^1.9.0",
+    "feathers-rest": "^1.7.1",
     "jquery": "^3.0.0",
     "lodash": "^4.13.1",
     "markdown": "^0.5.0",
@@ -93,6 +95,7 @@
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
+    "superagent": "^3.5.2",
     "to-markdown": "^3.0.4"
   }
 }
